k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
        - name: portfolio
      containers:
        - name: portfolio
          image: ghcr.io/origa2001/portfolio:v2
          ports:
            - containerPort: 80
