k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: default
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
